# bearings

./: .gitignore  Bearings.podspec  CLAUDE.md  CONTRIBUTING.md  Geomony.podspec  README.md  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
.claude/: settings.local.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: bearings_jni.cpp  geomony_jni.cpp  geotrack_jni.cpp
android/src/main/java/com/bearings/: BearingsActivityReceiver.kt  BearingsForegroundService.kt  BearingsGeofenceReceiver.kt  BearingsLocationService.kt  BearingsModule.kt  BearingsPackage.kt  BearingsPlatformBridge.kt  BearingsScheduleReceiver.kt
android/src/main/java/com/geomony/: GeomonyActivityReceiver.kt  GeomonyForegroundService.kt  GeomonyGeofenceReceiver.kt  GeomonyLocationService.kt  GeomonyModule.kt  GeomonyPackage.kt  GeomonyPlatformBridge.kt  GeomonyScheduleReceiver.kt
android/src/main/java/com/geotrack/: GeotrackActivityReceiver.kt  GeotrackForegroundService.kt  GeotrackGeofenceReceiver.kt  GeotrackLocationService.kt  GeotrackModule.kt  GeotrackPackage.kt  GeotrackPlatformBridge.kt  GeotrackScheduleReceiver.kt
cpp/: CMakeLists.txt
cpp/include/bearings/: BearingsCore.h  Config.h  Geofence.h  GeofenceStore.h  Location.h  LocationStore.h  Logger.h  PlatformBridge.h  Schedule.h
cpp/include/geomony/: Config.h  Geofence.h  GeofenceEventRecord.h  GeofenceEventStore.h  GeofenceStore.h  GeomonyCore.h  Location.h  LocationStore.h  Logger.h  PlatformBridge.h  Schedule.h
cpp/include/geotrack/: Config.h  Geofence.h  GeofenceStore.h  GeotrackCore.h  Location.h  LocationStore.h  Logger.h  PlatformBridge.h  Schedule.h
cpp/src/: BearingsCore.cpp  Config.cpp  Geofence.cpp  GeofenceEventRecord.cpp  GeofenceEventStore.cpp  GeofenceStore.cpp  GeomonyCore.cpp  GeotrackCore.cpp  Location.cpp  LocationStore.cpp  Logger.cpp  Schedule.cpp
cpp/test/: MockPlatformBridge.h  test.h  test_core.cpp
example/: app.json  package.json
example/src/: App.tsx
example/src/components/: BottomToolbar.tsx  FABMenu.tsx  SettingsRow.tsx  SettingsSection.tsx  TrackingMap.tsx
example/src/lib/: settingsStorage.ts
example/src/screens/: AddGeofenceScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
ios/: Bearings.h  Bearings.mm  BearingsLocationDelegate.h  BearingsLocationDelegate.mm  BearingsPlatformBridge.h  BearingsPlatformBridge.mm  Geomony.h  Geomony.mm  GeomonyLocationDelegate.h  GeomonyLocationDelegate.mm  GeomonyPlatformBridge.h  GeomonyPlatformBridge.mm  Geotrack.h  Geotrack.mm  GeotrackLocationDelegate.h  GeotrackLocationDelegate.mm  GeotrackPlatformBridge.h  GeotrackPlatformBridge.mm
src/: NativeBearings.ts  NativeGeomony.ts  index.tsx  types.ts
src/__tests__/: geofence-simulation.test.ts  index.test.tsx  schedule.test.ts
src/__tests__/harness/: GeotrackSimulator.ts  geo.ts  locations.ts  types.ts
